--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>SocialPixel UI Mockup</title>
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
   <body>
     <iframe
-      style="border: 1px solid rgba(0, 0, 0, 0.1);position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"
       width="100%"
       height="100%"
       src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FYRiYIeO9kUWGpro8YuOyLM%2FSocialPixel-UI%3Fnode-id%3D0%253A1"
